Fix css text alignment.

--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -88,6 +88,10 @@ ul.article-tools.nav.story-share.body-sharing-top {
   }
 
   .text-right {
+    text-align: right;
+  }
+
+  .text-center {
     text-align: center;
   }
 
